Fixed vertical overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 html body {
   margin: 0;
-  padding: 0;
   overflow-x: hidden;
+  overscroll-behavior-y: none;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -13,7 +13,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-/* * {
-  outline: 1px solid red;
-} */
