--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,5 @@
 
 body {
   margin: 0;
-  padding: 0;
-  height: 100%;
+  overflow-x: hidden;
 }
